# ncc-line-chatbot-prod

./: .gitignore  Dockerfile  Makefile  README.md  compose.yaml  pyproject.toml
notebooks/: make_qa_dataset.ipynb
src/: find_answer.py  main.py  rule.py  send_reminders.py  utils.py
